--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -11,7 +11,7 @@
                 <a class="nav-link" routerLink="/pagina2">Platillos con Pollo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/pagina3">Platillo Aleatorio</a>
+                <a class="nav-link" routerLink="/pagina3">Tu Próximo Platillo Favorito</a>
             </li>
         </ul>
     </div>
