--- a/src/app/pages/pagina3/pagina3.component.html
+++ b/src/app/pages/pagina3/pagina3.component.html
@@ -1,4 +1,4 @@
-<h5 class="title">Platillo Aleatorio</h5>
+<h5 class="title">¿Listo para Probar Algo Nuevo? Aquí Tienes una Receta</h5>
 
 <div *ngIf="meal" class="meal-card">
     <h5 class="meal-title">{{ meal.strMeal }}</h5>
