--- a/src/app/pages/pagina2/pagina2.component.html
+++ b/src/app/pages/pagina2/pagina2.component.html
@@ -1,4 +1,4 @@
-<h5 class="title">Platillos con Pollo</h5>
+<h5 class="title">Para los Verdaderos Amantes del Pollo</h5>
 
 <ul class="meal-list">
     @for(post of meals; track post.idMeal) {
