--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
         <nav class="nav-buttons">
             <a href="/pagina1" class="btn">Categorías de Comida</a>
             <a href="/pagina2" class="btn">Platillos con Pollo</a>
-            <a href="/pagina3" class="btn">Platillo Aleatorio</a>
+            <a href="/pagina3" class="btn">Tu Próximo Platillo Favorito</a>
         </nav>
     </div>
 </div>
